# aria-assistant

./: .env.example.local  .env.example.prod  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf
backend/: Dockerfile  Dockerfile.api  Dockerfile.api.prod  gunicorn.conf.py  pyproject.toml
backend/agent/: __init__.py  citizen_agent.py  main.py
backend/agent/rag/: __init__.py  domain_classifier.py  indexer.py  loaders.py  prompts.py  query_engine.py
backend/agent/session/: __init__.py  manager.py  redis_store.py
backend/agent/utils/: config.py
backend/api/: server.py
backend/api/routes/: documents.py  health.py  query.py  stats.py  token.py
backend/data/knowledge/: 432271430502.txt  47001155415.json  47001155416.json  47001155417.json  47001155454.json  47001165759.json  47001198816.json  47001199573.json  47001204449.json  47001210645.json  47001210651.json  47001211590.json  47001219502.json  47001220251.json  47001220252.json  47001220253.json  47001220254.json  47001220255.json  47001220256.json  47001224724.json  47001230423.json  47001230447.json  47001230984.json  47001239823.json  47001239824.json  47001239825.json  47001239829.json  47001246542.json  47001246545.json  47001249511.json  47001250423.json  47001250536.json  47001262230.json  47001262231.json  47001262232.json  47001262233.json  47001262235.json  47001268642.json  47001268643.json  47001268645.json  (+4 more)
backend/storage/index/: default__vector_store.json  docstore.json  index_store.json
frontend-streamlit/: Dockerfile  Dockerfile.prod  app.py  (+1 more)
(+20 files in other folders)
